syntax = "proto3";

package ai.lzy.v1.scheduler;

option java_outer_classname = "SchedulerPrivateApi";
option java_package = "ai.lzy.v1.scheduler";

service SchedulerPrivate {
  rpc WorkerProgress (WorkerProgressRequest) returns (WorkerProgressResponse);
}

// ========= Progress ==========

message WorkerProgress {
  message ExecutionCompleted {
    int32 rc = 1;
    string description = 2;
  }

  message Executing {}

  oneof status {
    ExecutionCompleted executionCompleted = 1;
    Executing executing = 2;
  }
}

message WorkerProgressRequest {
  string execution_id = 1;
  string task_id = 2;
  WorkerProgress progress = 3;
}
message WorkerProgressResponse {}